--- a/wwwsrc/src/assets/_variables.scss
+++ b/wwwsrc/src/assets/_variables.scss
@@ -1,6 +1,6 @@
-$body-bg: #be869c;
+$body-bg: #333132;
 
-$primary: #155f59;
+$primary: #494648;
 $secondary: #e90e66;
 $danger: #dd0000;
 $success: lime;
